--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,7 @@ project(better_taskbar)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(better_taskbar main.cpp)
+add_executable(better_taskbar main.cpp
+        main.h
+        hider.cpp
+        hider.h)
